# Fountext

./: .gitattributes  .gitignore  CMakeLists.txt  Fountext.spec  README.md  README_tr.md  guide_EN.fountain  guide_TR.fountain  requirements.txt
src/: lang_controller.py  main.py  ui_footer.py  ui_home.py  ui_menu.py  ui_navigator.py  ui_paper.py  ui_projects.py  ui_schema.py  ui_title.py  ui_title_dialog.py  ui_toolbar.py
src/locales/: en.json  fr.json  tr.json
src_cpp/: bindings.cpp  layout_engine.cpp  layout_engine.hpp
targz/Fountext/_internal/: libavahi-client.so.3  libavahi-common.so.3  libcups.so.2  libfreetype.so.6  libxml2.so.16
